--- a/primeira-bateria/index.html
+++ b/primeira-bateria/index.html
@@ -15,6 +15,29 @@
 
 <body>
     <!--Escreva a partir daqui-->
+    <div class="fundo">
+        <div class="container1">
+            HOME<br/>
+            MENU<br/>
+            LOGIN<br/>
+            ALEXA<br/>
+            <div class="sair">
+                SAIR
+            </div>
+        </div>
+        <div class="centro">
+            <div class="title">
+                <div class="memorial">
+                    MEMORIAL ALEXA
+                </div>
+                PRESS F TO<br/>PAY RESPECTS
+            </div>
+            <img src="primeira-bateria/alexa.png">
+        </div>
+        <div class="button">
+            PRESS F
+        </div>
+    </div>
 </body>
 
 </html>
