--- a/segunda-bateria/index.html
+++ b/segunda-bateria/index.html
@@ -15,6 +15,31 @@
 
 <body>
     <!--Escreva a partir daqui-->
+    <div class="fundo">
+        <div class="esquerda">
+            SAIR DA MATRIX
+        </div>
+        <div class="centro">
+            <div class="header">
+                <div class="home">HOME</div>
+                <div class="menu">MENU</div>
+                <div class="login">LOGIN</div>
+            </div>
+            <img src="segunda-bateria/logo.png"/>
+            <div>
+                <div class="pilulas">
+                    <div class="vermelha">PILULA VERMELHA</div>
+                    <div class="azul">PILULA AZUL</div>
+                </div>
+                <div class="ver">
+                    <div class="part">VER PARTI</div><div class="cip">CIPANTES</div>
+                </div>
+            </div>
+        </div>
+        <di0v class="direita">
+            FICAR NA MATRIX
+        </div>
+    </div>
 </body>
 
 </html>
